# yadro_25

./: .gitignore  README.md  build.bat  run_test.bat
tasks/: CMakeLists.txt
tasks/computer_club/: main.cpp
tasks/tape/: CMakeLists.txt  tape.toml
tasks/tape/src/: CMakeLists.txt  main.cpp  sort_tape.cpp  sort_tape.hpp  tape.cpp  tape.hpp
tasks/tape/test/: CMakeLists.txt  input.txt  test_tape.cpp
